implementing jwt and refresh token mechanism (wip)
